--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -3,11 +3,11 @@ version: 3.0.0
 # Icarus theme variant, can be "default" or "cyberpunk"
 variant: default
 # Path or URL to the website's logo
-logo: /img/logo.svg
+logo: /img/logo.png
 # Page metadata configurations
 head:
     # URL or path to the website's icon
-    favicon: https://avatars1.githubusercontent.com/u/5587310
+    favicon: /img/avatar.jpg
     # Open Graph metadata
     # https://hexo.io/docs/helpers.html#open-graph
     open_graph:
@@ -198,7 +198,7 @@ widgets:
         # Author's current location
         location:
         # URL or path to the avatar image
-        avatar: https://avatars1.githubusercontent.com/u/5587310
+        avatar: /img/avatar.jpg
         # Whether show the rounded avatar image
         avatar_rounded: true
         # Email address for the Gravatar
